add GetMemberByUUID and small fix
