# app/domain/members.go
@@ -15,6 +15,12 @@ func (i Member) TableName() string {
 // AdminRegistMemberJSONRequestBody defines body for RegistMember for application/json ContentType.
 type AdminRegistMemberJSONRequestBody api.AdminRegistMemberJSONRequestBody
 
+// UpdateMemberUserJSONBody defines parameters for UpdateMemberUser.
+type UpdateMemberUserJSONBody api.UpdateMemberUserJSONBody
+
+// MemberResponse defines model for Members.
+type MemberResponse api.MemberResponse
+
 // MembersResponse defines model for Members.
 type MembersResponse struct {
 	Members []*Member `json:"members"`
