# openapi/v1/openapi.yml
@@ -42,7 +42,7 @@ paths:
     get:
       security:
         - security: []
-      operationId: GetAdminInfo
+      operationId: GetAdminUser
       summary: adminUserの取得
       description: adminを取得します。ページングが可能です。
       tags:
@@ -73,7 +73,7 @@ paths:
     put:
       security:
         - security: []
-      operationId: updateAdminInfo
+      operationId: updateAdminUser
       summary: adminUser情報更新
       description: adminUserを更新する。
       tags:
@@ -127,7 +127,7 @@ paths:
     delete:
       security:
         - security: []
-      operationId: deleteAdminInfo
+      operationId: deleteAdminUser
       summary: adminUserの削除
       description: adminを削除します。
       tags:
@@ -299,41 +299,61 @@ paths:
                     type: integer
         default:
           $ref: '#/components/responses/InternalServerError'
-    # put:
-    #   security:
-    #     - security: []
-    #   operationId: updateMember
-    #   summary: member情報更新
-    #   description: メンバを更新する。
-    #   tags:
-    #     - AdminMembers
-    #   requestBody:
-    #     content:
-    #       application/json:
-    #         schema:
-    #           type: object
-    #           properties:
-    #             name:
-    #               type: string
-    #               description: member name
-    #           required:
-    #             - name
-    #   responses:
-    #     '200':
-    #       description: memberの更新が成功した場合
-    #       content:
-    #         application/json:
-    #           schema:
-    #             type: object
-    #             properties:
-    #               members:
-    #                 type: array
-    #                 items:
-    #                   $ref: '#/components/schemas/CommonSuccessResponse'
-    #               total:
-    #                 type: integer
-    #     default:
-    #       $ref: '#/components/responses/InternalServerError'
+  /admin/members/{uuid}:
+    put:
+      security:
+        - security: []
+      operationId: updateMemberUser
+      summary: member情報更新
+      description: memberを更新する。
+      tags:
+        - member
+      parameters:
+        - name: uuid
+          in: path
+          required: true
+          description: member uuid
+          schema:
+            type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                  description: name
+                phone_number:
+                  type: string
+                  description: phone number
+                status:
+                  type: string
+                  description: status
+                hourly_price:
+                  type: string
+                  description: hourly price
+              required:
+                - phone_number
+                - name
+                - status
+                - hourly_price
+      responses:
+        '201':
+          description: memberの更新成功
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  members:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/MemberResponse'
+                  total:
+                    type: integer
+        default:
+          $ref: '#/components/responses/InternalServerError'
 tags:
   - name: AdminMembers
     description: members api
@@ -574,6 +594,49 @@ components:
         - id
         - admin_id
         - name
+    MemberResponse:
+      description: Member
+      type: object
+      properties:
+        id:
+          description: ID
+          type: integer
+          format: int64
+        member_id:
+          description: member_id
+          type: string
+        name:
+          description: name
+          type: string
+        phone_number:
+          description: phone
+          type: string
+        status:
+          description: status
+          type: string
+        hourly_price:
+          description: 時間単価
+          type: integer
+          format: int64
+        created_at:
+          description: 登録日
+          type: string
+          format: date-time
+        updated_at:
+          description: 更新日
+          type: string
+          format: date-time
+        deleted_at:
+          description: 削除日
+          type: string
+          format: date-time
+      required:
+        - id
+        - member_id
+        - name
+        - status
+        - created_at
+        - updated_at
   responses:
     ErrorResponse:
       description: エラーレスポンス
